bizinikiwi/pezframe/support/test/tests/pezpallet_ui/task_missing_weight.stderr
error: missing `#[pezpallet::task_weight(..)]` attribute
  --> tests/pezpallet_ui/task_missing_weight.rs:34:6
   |
34 |         fn foo() -> DispatchResult {
   |            ^^^
